# anki

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  book_norwood_builder.json  docker-compose.yml  docker-entrypoint.sh  go.mod  theory_tenses.md  tz_sqlite_to_postgres.md  word_topics.json
back/: go.sum  theory_tenses.json  tz_anki_go.md
back/cmd/server/: main.go
back/internal/ai/: grpc_client.go
back/internal/ai/pb/tutor/v1/: tutor.pb.go
back/internal/api/: ai_handler.go  handler.go  rag_handler.go
back/internal/auth/: middleware.go
back/internal/model/: model.go
back/internal/placement/: placement.go
back/internal/review/: sm2.go
back/internal/storage/: repository.go
back/migrations/: 00003_multiuser.sql  00004_placement.sql
back/scripts/: gen_book_json.py
cmd/server/: main.go
front/landing/: package-lock.json  package.json  vite.config.ts
front/landing/src/: App.tsx
front/landing/src/components/ui/: button.tsx
front/web/: app.js  index.html
internal/ai/pb/tutor/v1/: tutor_grpc.pb.go
internal/api/: auth_handler.go  enrich_handler.go  placement_handler.go
internal/auth/: jwt.go
internal/service/: event_publisher.go  service.go
landing/: index.html
landing/src/: index.css
llm/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  alembic.ini  docker-entrypoint.sh  pyproject.toml
llm/.github/workflows/: lint.yml
llm/alembic/: env.py
llm/alembic/versions/: 0000_initial_schema.py  0001_add_learning_analytics.py  0002_add_bkt_to_topic_mastery.py  0003_add_fileentitytype_enum.py  0004_rename_fileentitytype_values_to_uppercase.py  0005_add_material_fts.py  0006_add_confidence_calibration.py  0007_add_vector_embeddings.py  0008_add_example_bank.py  0009_add_knowledge_docs.py
llm/proto/tutor/v1/: tutor.proto
llm/scripts/: gen_proto.sh  seed_admin.py
llm/src/: auth_utils.py  database.py  file_processing.py  logger.py  main.py  schemas.py  settings.py
llm/src/adaptive/: curriculum.py  engine.py  recommendation.py
llm/src/analytics/: als.py  bkt.py  calibration.py  embeddings.py  example_bank.py  forgetting.py  knowledge_docs.py  rag.py  reflection.py  retrievers.py
llm/src/chat/: graph.py  intent.py  lifecycle.py  persistence.py  prompts.py  rag_router.py  state.py  streaming.py  tools.py
llm/src/config/: topics.json
llm/src/grpc_svc/: enrich.py  events.py  explain.py  practice.py  server.py  servicer.py  session.py
llm/src/grpc_svc/pb/tutor/v1/: tutor_pb2.py  tutor_pb2.pyi  tutor_pb2_grpc.py
llm/src/repositories/: __init__.py  base.py  calendar_event.py  chat.py  curriculum.py  example.py  file.py  file_storage.py  knowledge.py  learning_event.py  material.py  message.py  project.py  storage.py  topic.py  topic_mastery.py  usage_log.py  user.py  vocabulary.py
llm/src/routers/: __init__.py  adaptive.py  analytics.py  auth.py  calendar_events.py  chat.py  curriculum.py  dependencies.py  example_bank.py  files.py  knowledge_docs.py  lessons.py  materials.py  notes.py  pages.py  project.py  rag.py  recommendation.py  reflection.py  repeat_items.py  topics.py  usage.py  vocabulary.py
llm/src/static/css_/: attachments-page.css  base.css  buttons.css  calendar-page.css  cards.css  chat-page.css  chat.css  flatpickr-theme.css  forms.css  lesson-page.css  login.css  materials-page.css  pages.css  repeat-page.css  sidebar.css  student-page.css
llm/src/static/js/components/: modal.js  sidebar.js  topics.js  vocabulary.js
llm/src/static/js/pages/: attachments.js  calendar.js  chat.js  index.js  lesson.js  login.js  materials.js  repeat.js  student.js
llm/src/static/js/utils/: api.js  dom.js  helpers.js  modalUrl.js
llm/src/templates/: attachments.html  calendar.html  chat.html  lesson.html  login.html  materials.html  new_index.html  repeat.html  student_profile.html
llm/src/templates/partials/: left_sidebar.html  right_sidebar.html
migrations/: 00001_init.sql  00002_event_outbox.sql
scripts/: gen_proto.sh  gen_theory_json.py
web/: style.css
