[project]
name = "tutor-assistant"
version = "0.3.0"
description = "AI-powered assistant for tutors with LangGraph and JSON storage"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.4",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=1.0.0",
    "langgraph>=0.2.0",
    "langfuse>=2.0.0",
    "loguru>=0.7.3",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9.11",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "pillow>=10.0.0",
    "tiktoken>=0.7.0",
    "rich>=13.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
    "youtube-transcript-api>=0.6.0",
    "faster-whisper>=1.0.0",
    "aioboto3>=15.5.0",
    "trafilatura>=2.0.0",
    "greenlet>=3.2.4",
    "sentence-transformers>=5.6.0",
    "langchain-gigachat>=0.5.1",
    "grpcio>=1.82.1",
    "grpcio-tools>=1.82.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"

include = [
    "src/**/*.py",
]
exclude = [
    '*.ipynb'
]

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle (Error)
    "W",      # pycodestyle (Warning)
    "FAST",   # fastapi
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PT",     # flake8-pytest-style
    "N",      # pep8-naming
    "PERF",   # Perflint
    "PLE",    # Pylint Error
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
    "ANN",    # flake8-annotations

    # TODO: maybe?
    # "D",  # pydocstyle, turn on after writing fixing docs
]

ignore = [
    "ARG001",    # Unused function argument
    "PERF401",   # Use `list.extend` to create a transformed list
    "B008",      # Calling a function for argument defaults
    "BLE001",    # Do not catch blind exception
    "SIM108",    # Use ternary operator instead of `if`-`else`-block
    "SLF001",    # Private member accessed
    "RET504",    # Unnecessary assignment before `return` statement
    "D204",      # 1 blank line required after class docstring
    "D210",      # No whitespaces allowed surrounding docstring text
    "N811",      # Constant imported as non-constant
    "RUF001",    # String contains ambiguous cyrillic letter
    "RUF002",    # Docstring contains ambiguous cyrillic letter
    "ANN204",    # Missing return type annotation for special method `__init__`
    "ANN401",    # Dynamically typed expressions (typing.Any) disallowed
    "RUF022",    # __all__ is not sorted

    # Remove later?
    "FAST001",   # FastAPI route with redundant argument
]

[tool.ruff.lint.per-file-ignores]
"src/scripts/*.py" = ["T201", "E402", "S603", "S607", "ASYNC250", "ANN201", "ANN001"]
"scripts/*.py" = ["T201", "E402", "S603", "S607", "ASYNC250", "ANN201", "ANN001"]
"src/chat/prompts.py" = ["E501"]
"src/settings.py" = ["S104", "S105"]
"src/chat/tools.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Singleton async engine in src/database.py binds asyncpg connections to the
# first loop that touches them. Share one loop across the whole session so the
# pool stays usable test-to-test.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: pure logic, no DB or network",
    "integration: requires test database",
    "agent: LangGraph / LLM tests",
]

[dependency-groups]
dev = [
    "yapf>=0.43.0",
    "ruff>=0.14.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ipykernel>=7.3.0",
    "nbconvert>=7.17.1",
    "pandas>=3.0.3",
]

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
indent_width = 4
continuation_indent_width = 4
split_before_first_argument = false
dedent_closing_brackets = false
split_complex_comprehension = true
coalesce_brackets = true
SPLIT_PENALTY_FOR_ADDED_LINE_SPLIT = 300
